--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,17 @@ code {
 header {
   display: flex;
   justify-content: space-between;
-  flex-direction: row-reverse;
+  /* flex-direction: row-reverse; */
   border-bottom: 1px solid #f2f2f2;
   padding: 10px 40px;
   min-height: 40px;
   align-items: center;
+}
+
+header .header_logo {
+  color: black;
+  font-weight: 600;
+  font-size: 18px;
 }
 
 header a {
@@ -45,9 +51,167 @@ footer {
   gap: 20px;
 }
 
-.post-list {
+footer a {
+  margin: 0px 10px;
+  text-decoration: none;
+  color: gray;
+}
+
+footer a:focus,
+footer a:hover {
+  color: black;
+}
+
+/* post navigation */
+.post_navigation {
+  display: flex;
+  gap: 12px;
+  margin: 0 auto;
+  max-width: 680px;
+  font-size: 16px;
+  color: gray;
+  cursor: pointer;
+  padding: 48px 20px 0px 20px;
+}
+
+.post_navigation-active {
+  color: black;
+  font-weight: 600;
+}
+
+/* 포스트 리스트, 포스트 디테일 */
+
+.post_list,
+.post_detail {
   /* 뷰포트 기준 90프로 */
   min-height: 90vh;
   padding: 20px 40px;
   text-align: center;
+  max-width: 680px;
+  text-align: left;
+  line-height: 24px;
+}
+
+.post_box {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-top: 1px solid #f2f2f2;
+}
+
+.post_profile-box {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.post_profile {
+  width: 36px;
+  height: 36px;
+  background-color: #f2f2f2;
+  border-radius: 50%;
+}
+
+.post_date,
+.post_author-name {
+  color: gray;
+}
+
+.post_title {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 14px 0px;
+}
+
+.post_text {
+  color: gray;
+  font-size: 16px;
+}
+
+.post_list a {
+  text-decoration: none;
+  color: black;
+}
+
+.post_utils-box {
+  display: flex;
+  gap: 8px;
+  font-size: 14px;
+  color: gray;
+}
+
+.post_delete:hover,
+.post_delete:focus {
+  color: black;
+}
+
+.post_edit:hover,
+.post_edit:focus {
+  color: black;
+}
+
+/* post detail */
+.post_detail .post_title {
+  font-size: 36px;
+  line-height: 40px;
+}
+
+.post_detail .post_utils-box {
+  padding: 10px 0px;
+  border-top: 1px solid #f2f2f2;
+  border-bottom: 1px solid #f2f2f2;
+  flex-direction: row;
+}
+
+.post_detail .post_profile-box {
+  padding: 10px 0px;
+}
+
+.post_detail .post_text {
+  padding: 20px 0px;
+}
+
+/* profile */
+.profile_box {
+  display: flex;
+  gap: 18px;
+  align-items: center;
+  font-size: 18px;
+  margin: 0 auto;
+  max-width: 680px;
+  text-align: left;
+  line-height: 24px;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.flex_box-lg {
+  display: flex;
+  gap: 18px;
+  align-items: center;
+}
+
+.profile_image {
+  width: 72px;
+  height: 72px;
+  background-color: #f2f2f2;
+  border-radius: 50%;
+}
+
+.profile_name {
+  font-size: 16px;
+  padding-top: 4px;
+}
+
+.profile_email {
+  font-weight: 500;
+}
+
+.profile_logout {
+  color: gray;
+  font-size: 14px;
+}
+
+.profile_logout:hover,
+.profile_logout:focus {
+  color: black;
 }
