--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,7 @@ footer a:hover {
 .post_list,
 .post_detail {
   /* 뷰포트 기준 90프로 */
+  margin: 0 auto;
   min-height: 90vh;
   padding: 20px 40px;
   text-align: center;
@@ -101,6 +102,7 @@ footer a:hover {
 .post_profile-box {
   display: flex;
   gap: 8px;
+  font-size: 14px;
   align-items: center;
 }
 
@@ -139,13 +141,19 @@ footer a:hover {
   color: gray;
 }
 
+.post_delete {
+  cursor: pointer;
+}
+
 .post_delete:hover,
 .post_delete:focus {
   color: black;
 }
 
 .post_edit:hover,
-.post_edit:focus {
+.post_edit:focus,
+.post_edit a:focus,
+.post_edit a:hover {
   color: black;
 }
 
@@ -168,6 +176,15 @@ footer a:hover {
 
 .post_detail .post_text {
   padding: 20px 0px;
+}
+
+.post_edit a {
+  text-decoration: none;
+  color: gray;
+}
+.post_delete a {
+  text-decoration: none;
+  color: gray;
 }
 
 /* profile */
@@ -214,4 +231,190 @@ footer a:hover {
 .profile_logout:hover,
 .profile_logout:focus {
   color: black;
+}
+
+/* carousel */
+
+.carousel {
+  margin: 0 auto;
+  max-width: 980px;
+  margin-top: 36px;
+}
+
+ul.carousel_slides {
+  display: block;
+  position: relative;
+  height: 400px;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  list-style: none;
+}
+
+.carousel_slides * {
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+}
+
+ul.carousel_slides input {
+  display: none;
+}
+
+.carousel_slide-container {
+  display: block;
+}
+
+.carousel_slide-img {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 0;
+  transition: all 0.7s ease-in-out;
+}
+
+.carousel_slide-img img {
+  width: auto;
+  min-width: 100%;
+  height: 100%;
+}
+
+.carousel_controls {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  font-size: 100px;
+  line-height: 400px;
+  color: #fff;
+}
+
+.carousel_controls label {
+  display: none;
+  position: absolute;
+  padding: 0 20px;
+  opacity: 0;
+  transition: opacity 0.2s;
+  cursor: pointer;
+}
+
+.carousel_slide-img:hover + .carousel_controls label {
+  opacity: 0.5;
+}
+
+.carousel_controls label:hover {
+  opacity: 1;
+}
+
+.carousel_controls .carousel_slide-prev {
+  width: 49%;
+  text-align: left;
+  left: 0;
+}
+
+.carousel_controls .carousel_slide-next {
+  width: 49%;
+  text-align: right;
+  right: 0;
+}
+
+.carousel_dots {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+  z-index: 999;
+  text-align: center;
+}
+
+.carousel_dots .carousel_dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.5;
+  margin: 10px;
+}
+
+input:checked + .carousel_slide-container .carousel_slide-img {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 1s ease-in-out;
+}
+
+input:checked + .carousel_slide-container .carousel_controls label {
+  display: block;
+}
+
+input#img-1:checked ~ .carousel_dots label#img-dot-1,
+input#img-2:checked ~ .carousel_dots label#img-dot-2,
+input#img-3:checked ~ .carousel_dots label#img-dot-3 {
+  opacity: 1;
+}
+
+input:checked + .carousel_slide-container .nav label {
+  display: block;
+}
+
+.form {
+  margin: 0 auto;
+  max-width: 680px;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.form input {
+  height: 20px;
+  padding: 10px 10px;
+  font-size: 16px;
+  border-radius: 0.3rem;
+  border: 1px solid lightgray;
+  width: 96%;
+  max-width: 680px;
+}
+.form textarea {
+  min-height: 400px;
+  padding: 10px 10px;
+  font-size: 16px;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+  border: 1px solid lightgray;
+  width: 96%;
+  max-width: 680px;
+}
+
+.form .from_block {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.form label {
+  display: block;
+  font-weight: 500;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+.form .form_btn-submit {
+  width: 100%;
+  height: 48px;
+  padding: 10px 10px;
+  float: right;
+  cursor: pointer;
+  margin: 0 auto;
+  font-size: 16px;
+  background-color: #2563eb;
+  color: white;
+}
+
+.form .form_btn-submit:hover,
+.form .form_btn-submit :focus {
+  background-color: #1945a4;
 }
